src/FinancialForce ClickLink/objects/IntegrationRuleRelationship__c.object
<CustomObject>
    <customHelpPage>helpintegrationrulerelationship</customHelpPage>
    <fields>
        <fullName>IntegrationRule__c</fullName>
        <label>Master ClickLink Rule</label>
        <referenceTo>IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Relationships (Master ClickLink)</relationshipLabel>
        <relationshipName>IntegrationRuleRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RelationshipIntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detail ClickLink Rule</label>
        <referenceTo>IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Relationships (Detail ClickLink)</relationshipLabel>
        <relationshipName>RelationshiIntegrationRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipName__c</fullName>
        <label>Source Relationship Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipSourceObject__c</fullName>
        <formula>RelationshipIntegrationRule__r.SourceObject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Relationship Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipTargetField__c</fullName>
        <label>Target Relationship Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipTargetObject__c</fullName>
        <formula>RelationshipIntegrationRule__r.TargetObject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Relationship Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRelationshipField__c</fullName>
        <label>Source Relationship Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ClickLink Relationship</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>